--- a/src/features/contact/Contact.css
+++ b/src/features/contact/Contact.css
@@ -1,3 +1,8 @@
+/* contact */
+.contact {
+	font-size: 1.1vw;
+}
+
 .donate-button {
   background-color: rgb(8, 37, 78);
 	border-radius: 5%;
