--- a/src/features/resources/research/Research.css
+++ b/src/features/resources/research/Research.css
@@ -13,18 +13,24 @@
 }
 
 .research-image {
-	height: auto;
+	max-height: 30vw;
 	width: auto;
 }
 
-.research-text {
+.research-headline {
+	text-align: center;
+	line-height: 2vw;
+}
+
+.research-container-text {
 	font-size: 1.3vw;
 	line-height: 1.3vw;
-	padding-bottom: 2vw;
+	padding-bottom: 4vw;
+	padding-top: 3vw;
 }
 
 .research-description {
-	font-size: 1.1vw;
-	line-height: 1.1vw;
-	padding-bottom: 1.5vw;
+	font-size: 1.2vw;
+	line-height: 1.3vw;
+	padding: 5%;
 }
